# pw-masters-secure-gateway

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.json
apps/gateway-api/: Dockerfile  README.md  project.json  pyproject.toml
apps/gateway-api/gateway_api/: config.py  dependencies.py  health.py  main.py
apps/gateway-api/gateway_api/api/: __init__.py  chat.py  detect.py  providers.py  pseudonymize.py  sessions.py
apps/gateway-api/gateway_api/detection/: __init__.py  checksums.py  default_thresholds.yaml  engine.py  nlp.py  normalization.py
apps/gateway-api/gateway_api/llm_providers/: __init__.py  anthropic_provider.py  base.py  echo_provider.py  llm_router.py  ollama_provider.py  openai_provider.py
apps/gateway-api/gateway_api/observability/: __init__.py  request_logging.py  request_metrics.py
apps/gateway-api/gateway_api/pii_detection/: checksums.py  dto.py  engine.py  nlp.py  scoring.py  thresholds.py
apps/gateway-api/gateway_api/pipeline/: __init__.py  anonymization_pipeline.py
apps/gateway-api/gateway_api/pseudonym_generation/: __init__.py  dto.py  generator.py  inflection.py
apps/gateway-api/gateway_api/pseudonym_vault/: __init__.py  aes_gcm_encryption.py  coreference_matching.py  encryption.py  fuzzy_restoration.py  keys.py  mapping_keys.py  mapping_store.py  matching.py  original_restoration.py  session.py  session_layout.py  session_lock_registry.py  session_mapping_repository.py  store.py  unique_fake_factory.py
apps/gateway-api/tests/: conftest.py  test_chat_api.py  test_detect_api.py  test_detect_gating.py  test_health.py  test_observability.py  test_pipeline_inbound.py  test_providers_api.py  test_pseudonymize_api.py  test_request_logging.py  test_sessions_api.py
apps/gateway-api/tests/detection/: test_address.py  test_bank_account.py  test_checksums.py  test_date_pl.py  test_engine.py  test_nip.py  test_overlap.py  test_pesel.py  test_registry.py  test_regon.py  test_scoring.py  test_thresholds.py
apps/gateway-api/tests/llm_providers/: test_anthropic_provider.py  test_llm_router.py  test_ollama_provider.py  test_openai_provider.py  test_provider_integration_mocked.py
apps/gateway-api/tests/pii_detection/: test_address.py  test_bank_account.py  test_checksums.py  test_date_pl.py  test_engine.py  test_nip.py  test_overlap.py  test_pesel.py  test_registry.py  test_regon.py  test_scoring.py  test_thresholds.py
apps/gateway-api/tests/pipeline/: test_anonymization_pipeline.py
apps/gateway-api/tests/pseudonym_generation/: test_contact.py  test_date_pl.py  test_generator.py  test_identifiers.py  test_inflection.py  test_location.py  test_person.py
apps/gateway-api/tests/pseudonym_vault/: test_aes_gcm_encryption.py  test_coreference_matching.py  test_encryption.py  test_fuzzy_restoration.py  test_keys.py  test_mapping_keys.py  test_mapping_store.py  test_matching.py  test_session_lock_registry.py  test_store.py
apps/gateway-eval/: ARCHITECTURE.md  README.md  WYNIKI-INTERPRETACJA.md  WYNIKI-JAKOSC-ODPOWIEDZI.md  answer_quality_prototype.py  project.json  pyproject.toml
apps/gateway-eval/eval-results/: aggregate.json  answer_quality_20docs.json  answer_quality_4arms.json  answer_quality_prototype.json  detection_per_type.csv  latency.csv  leaks.csv  restoration.csv
apps/gateway-eval/gateway_eval/: __main__.py  config.py  run_evaluation.py
apps/gateway-eval/tests/: conftest.py  test_end_to_end.py  test_evaluation_client.py  test_no_circular_ground_truth.py
(+230 files in other folders)
