[tool.coverage.run]
branch = true
source = [ "gateway_api" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = """
 --cov
 --cov-report html:'../../coverage/apps/gateway-api/html'
 --cov-report xml:'../../coverage/apps/gateway-api/coverage.xml'
 --html='../../reports/apps/gateway-api/unittests/html/index.html'
 --junitxml='../../reports/apps/gateway-api/unittests/junit.xml'
"""

[project]
name = "gateway-api"
version = "1.0.0"
description = "Secure LLM anonymization gateway — backend API (Epic 1: infrastructure & runtime)."
requires-python = ">=3.12,<4"
readme = 'README.md'
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "spacy>=3.7.0",
  "presidio-analyzer>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gateway_api"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "ruff>=0.8.2",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.23.0",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
