[tool.coverage.run]
branch = true
source = [ "gateway_eval" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = """
 --cov
 --cov-report html:'../../coverage/apps/gateway-eval/html'
 --cov-report xml:'../../coverage/apps/gateway-eval/coverage.xml'
 --html='../../reports/apps/gateway-eval/unittests/html/index.html'
 --junitxml='../../reports/apps/gateway-eval/unittests/junit.xml'
"""

[project]
name = "gateway-eval"
version = "1.0.0"
description = "Black-box PII evaluation harness for the anonymization gateway (EPIC 8)."
requires-python = ">=3.12,<4"
readme = 'README.md'
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "typer>=0.12.0",
  "scikit-learn>=1.5.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
  "pandas>=2.2.0",
  "gateway-api",
]

[tool.uv.sources]
gateway-api = { path = "../gateway-api", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["gateway_eval"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.23.0",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
  "fakeredis>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".venv",
  "dist",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  "E",
  "F",
  "UP",
  "B",
  "SIM",
  "I",
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests favour readable inline fixtures/JSON over wrapping; the CLI uses typer's
# documented function-call-in-default (B008) idiom and long Option signatures.
"tests/**" = ["E501"]
"gateway_eval/__main__.py" = ["E501", "B008"]
